--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 				<div class="mt-4">
 
-					<input type="text" id="textInput" class="form-control displayOverride"/>
+					<input type="text" id="textInput" class="form-control col-6 col-sm-8 d-inline"/>
 
-					<button class="btn btn-success searchButton ml-5" onclick="renderEpisode(document.getElementById('textInput').value)">Search</button>
+					<button class="btn btn-success searchButton ml-2" onclick="renderEpisode(document.getElementById('textInput').value)">Search</button>
 
 				</div>
 
